added NCIT def search, updated defs edit file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,16 @@ export(makeObject)
 import(tidyverse)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(readr,read_csv)
 importFrom(readr,read_tsv)
 importFrom(stringr,str_c)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_starts)
 importFrom(tibble,column_to_rownames)
 importFrom(utils,download.file)
